force-app/main/default/objects/Anon_Run_Log__c/Anon_Run_Log__c.object-meta.xml
<CustomObject>
    <description>Audit log for every anonymization run. One record is created per object processed per run. Immutable once written — only status and record count are updated on completion.</description>
    <label>Anonymization Run Log</label>
    <pluralLabel>Anonymization Run Logs</pluralLabel>
    <nameField>
        <label>Run Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>ANON-{0000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>