force-app/main/default/objects/Anon_Run_Log__c/fields/Batch_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_ID__c</fullName>
    <label>Batch Job ID</label>
    <description>Salesforce AsyncApexJob ID of the batch that generated this log entry. Can be queried directly: SELECT Status FROM AsyncApexJob WHERE Id = :batchJobId</description>
    <type>Text</type>
    <length>18</length>
</CustomField>