force-app/main/default/objects/Anon_Run_Log__c/fields/Brand_Filter__c.field-meta.xml
<CustomField>
    <fullName>Brand_Filter__c</fullName>
    <label>Brand Filter Applied</label>
    <description>The brand/subsidiary filter value used for this run. Empty means all brands were processed.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>