force-app/main/default/objects/Anon_Run_Log__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <label>Completion Date</label>
    <description>Timestamp when the anonymization batch finished (success or failure).</description>
    <type>DateTime</type>
</CustomField>