force-app/main/default/objects/Anon_Run_Log__c/fields/Error_Details__c.field-meta.xml
<CustomField>
    <fullName>Error_Details__c</fullName>
    <label>Error Details</label>
    <description>Concatenated error messages from DML failures or strategy exceptions. Truncated to 32 KB.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>