force-app/main/default/objects/Anon_Run_Log__c/fields/Fields_Processed__c.field-meta.xml
<CustomField>
    <fullName>Fields_Processed__c</fullName>
    <label>Fields Processed</label>
    <description>JSON array of field API names that were anonymized in this run (e.g. ["FirstName","LastName","PersonEmail"]).</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>