force-app/main/default/objects/Anon_Run_Log__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <description>Salesforce API name of the object anonymized in this run entry.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>