force-app/main/default/objects/Anon_Run_Log__c/fields/Records_Failed__c.field-meta.xml
<CustomField>
    <fullName>Records_Failed__c</fullName>
    <label>Records Failed</label>
    <description>Number of records that could not be anonymized due to DML errors.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>