force-app/main/default/objects/Anon_Run_Log__c/fields/Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>Records_Processed__c</fullName>
    <label>Records Processed</label>
    <description>Total number of records successfully anonymized.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>