force-app/main/default/objects/Anon_Run_Log__c/fields/Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_Date__c</fullName>
    <label>Run Date</label>
    <description>Timestamp when the anonymization job was started.</description>
    <type>DateTime</type>
</CustomField>