force-app/main/default/objects/Anon_Run_Log__c/fields/Run_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Run_Group_ID__c</fullName>
    <label>Run Group ID</label>
    <description>UUID shared across all log entries belonging to the same anonymization run trigger. Use to group and correlate logs from a single admin action.</description>
    <type>Text</type>
    <length>36</length>
</CustomField>