force-app/main/default/objects/Anon_Run_Log__c/fields/Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By__c</fullName>
    <label>Triggered By</label>
    <description>User who initiated this anonymization run.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Anonymization Run Logs</relationshipLabel>
    <relationshipName>Anon_Run_Logs</relationshipName>
</CustomField>